--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
               <id>jacoco-report</id>
               <phase>test</phase>
               <goals>
-                <goal>report</goal>
+                <goal>report-aggregate</goal>
               </goals>
             </execution>
           </executions>
